<resources>
    <string name="app_name">GarageApplication</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_pwd">Forgot Password ?</string>
    <string name="or_signin_with">or Sign with</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up1"><u>Sign Up</u></string>
    <string name="change_password">Change Password</string>
    <string name="no_account">Don\'t have an account ?</string>
    <string name="enter_new_pwd">Please enter new password</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="please_wait">Please Wait...</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">My Account</string>
    <string name="orders">Orders</string>
    <string name="pick_history">PickUp And Drop Hsitory</string>
    <string name="pick_slots">Pickup And Drop Slots</string>
    <string name="communication">Communication</string>
    <string name="jobcardhistroy">Jobcard History</string>
    <string name="packagedetails">Package Details</string>
    <string name="contactus">Contact Us</string>
    <string name="faq">FAQ</string>
    <string name="feedback">Feedback</string>
    <string name="terms">Terms and Conditions</string>
    <string name="aboutus">About Us</string>
    <string name="reg_emp">Register Employee</string>
    <string name="wallet">Wallet</string>
    <string name="chatting">Chatting</string>
    <string name="help">Help</string>
    <string name="website">Website</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
</resources>