<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checkable="true"
            android:icon="@drawable/ic_home_icon"
            android:title="@string/menu_home" />
    </group>

    <group
        android:id="@+id/menu_account"
        android:checkableBehavior="single">
        <item android:title="@string/account">
            <menu>
                <item
                    android:id="@+id/nav_account"
                    android:checkable="true"
                    android:icon="@drawable/ic_profile_setting_icon"
                    android:title="@string/account" />
                <item
                    android:id="@+id/nav_orders"
                    android:checkable="true"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="@string/orders" />
                <item
                    android:id="@+id/nav_pick_history"
                    android:checkable="true"
                    android:icon="@drawable/ic_location_icon1"
                    android:title="@string/pick_history" />
                <item
                    android:id="@+id/nav_pick_slots"
                    android:checkable="true"
                    android:icon="@drawable/ic_location_icon1"
                    android:title="@string/pick_slots" />
                <item
                    android:id="@+id/nav_communication"
                    android:checkable="true"
                    android:icon="@drawable/ic_v_4"
                    android:title="@string/communication" />
                <item
                    android:id="@+id/nav_job_card_history"
                    android:icon="@drawable/ic_v_2"
                    android:checkable="true"
                    android:title="@string/jobcardhistroy" />
                <item
                    android:id="@+id/nav_package_details"
                    android:icon="@drawable/ic_v_4"
                    android:checkable="true"
                    android:title="@string/packagedetails" />
                <item
                    android:id="@+id/nav_reg_emp"
                    android:icon="@drawable/ic_edit_icon"
                    android:checkable="true"
                    android:title="@string/reg_emp" />
                <item
                    android:id="@+id/nav_wallet"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:checkable="true"
                    android:title="@string/wallet" />
                <item
                    android:id="@+id/nav_chatting"
                    android:icon="@drawable/ic_v_4"
                    android:checkable="true"
                    android:title="@string/chatting" />
            </menu>
        </item>
    </group>

    <group
        android:id="@+id/menu_help"
        android:checkableBehavior="single">
        <item android:title="@string/help">
            <menu>
                <item
                    android:id="@+id/nav_about_us"
                    android:icon="@drawable/ic_profile_setting_icon"
                    android:checkable="true"
                    android:title="@string/aboutus" />
                <item
                    android:id="@+id/nav_contact_us"
                    android:icon="@drawable/ic_add_map_icon"
                    android:checkable="true"
                    android:title="@string/contactus" />
                <item
                    android:id="@+id/nav_terms_conditions"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:checkable="true"
                    android:title="@string/terms" />
                <item
                    android:id="@+id/nav_feedback"
                    android:icon="@drawable/ic_v_6"
                    android:checkable="true"
                    android:title="@string/feedback" />
                <item
                    android:id="@+id/nav_faq"
                    android:icon="@drawable/ic_menu_camera"
                    android:checkable="true"
                    android:title="@string/faq" />
            </menu>
        </item>
    </group>
</menu>