<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp"
    tools:context=".Fragment.Account">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_75sdp"
        android:layout_height="@dimen/_75sdp"
        android:layout_gravity="center"
        android:src="@drawable/garageicon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <com.app.garageapplication.utility.TextViewDrawableSize
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawableLeft="@drawable/ic_profile_setting_icon"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableTint="@color/colorBlack"
            android:text="@string/name"
            android:textSize="@dimen/_12ssp"
            app:compoundDrawableHeight="@dimen/_18sdp"
            app:compoundDrawableWidth="@dimen/_18sdp" />

        <com.app.garageapplication.utility.TextViewDrawableSize
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="john Doe"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingLeft="@dimen/_5sdp"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorBlack"
            android:textSize="@dimen/_11ssp" />

        <com.app.garageapplication.utility.TextViewDrawableSize
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawableLeft="@drawable/ic_mo_no"
            android:drawablePadding="@dimen/_10sdp"
            android:text="@string/mobile_no"
            android:textSize="@dimen/_12ssp"
            app:compoundDrawableHeight="@dimen/_18sdp"
            app:compoundDrawableWidth="@dimen/_18sdp" />

        <com.app.garageapplication.utility.TextViewDrawableSize
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="1234567890"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingLeft="@dimen/_5sdp"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorBlack"
            android:textSize="@dimen/_11ssp" />

        <com.app.garageapplication.utility.TextViewDrawableSize
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawableLeft="@drawable/ic_email_icon"
            android:drawablePadding="@dimen/_10sdp"
            android:text="@string/email"
            android:textSize="@dimen/_12ssp"
            app:compoundDrawableHeight="@dimen/_18sdp"
            app:compoundDrawableWidth="@dimen/_18sdp" />

        <com.app.garageapplication.utility.TextViewDrawableSize
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="johnDoe@gmail.com"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingLeft="@dimen/_5sdp"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorBlack"
            android:textSize="@dimen/_11ssp" />

        <com.app.garageapplication.utility.TextViewDrawableSize
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawableLeft="@drawable/ic_add_map_icon"
            android:drawablePadding="@dimen/_10sdp"
            android:text="@string/address"
            android:textSize="@dimen/_12ssp"
            app:compoundDrawableHeight="@dimen/_18sdp"
            app:compoundDrawableWidth="@dimen/_18sdp" />

        <com.app.garageapplication.utility.TextViewDrawableSize
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Swargate, Pune, Maharasthra, 400111"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingLeft="@dimen/_5sdp"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorBlack"
            android:textSize="@dimen/_11ssp" />

    </LinearLayout>

</LinearLayout>