<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg_pattern"
    android:orientation="vertical"
    tools:context=".activities.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_175sdp"
            android:background="@color/color_template_divider_line2">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:padding="@dimen/_45sdp"
                android:src="@drawable/garageicon" />
        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_12ssp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Welcome Back, "
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/_11ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Please Sign in to continue app"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/_11ssp" />

                </LinearLayout>

                <com.app.garageapplication.utility.TextViewDrawableSize
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:drawableLeft="@drawable/ic_email_icon"
                    android:drawablePadding="@dimen/_10sdp"
                    android:text="@string/email"
                    android:textSize="@dimen/_12ssp"
                    app:compoundDrawableHeight="@dimen/_18sdp"
                    app:compoundDrawableWidth="@dimen/_18sdp" />

                <EditText
                    android:id="@+id/etMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:hint="john@gmail.com"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/_5sdp"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorBlack"
                    android:textSize="@dimen/_11ssp" />

                <com.app.garageapplication.utility.TextViewDrawableSize
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:drawableLeft="@drawable/ic_password_icon"
                    android:drawablePadding="@dimen/_10sdp"
                    android:text="@string/password"
                    android:textSize="@dimen/_12ssp"
                    app:compoundDrawableHeight="@dimen/_18sdp"
                    app:compoundDrawableWidth="@dimen/_18sdp" />

                <EditText
                    android:id="@+id/etPwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="*****"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/_5sdp"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorBlack"
                    android:textSize="@dimen/_11ssp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/llRememberMe"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/chkBox"
                            android:layout_width="@dimen/_15sdp"
                            android:layout_height="@dimen/_15sdp"
                            android:layout_gravity="center"
                            android:background="@drawable/check_uncheck_checkbox"
                            android:button="@null"
                            android:clickable="false"
                            android:gravity="center" />

                        <TextView
                            android:id="@+id/txtRememberMe"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:gravity="start"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:text="@string/remember_me"
                            android:textAlignment="viewStart"
                            android:textColor="@color/colorBlack"
                            android:textSize="@dimen/_11ssp" />

                    </LinearLayout>

                    <View
                        android:layout_width="@dimen/_10sdp"
                        android:layout_height="0dp" />

                    <TextView
                        android:id="@+id/txtForgotPwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@string/forgot_pwd"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/_11ssp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtSignIn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/round_button_green"
                        android:gravity="center_horizontal"
                        android:maxLines="1"
                        android:padding="@dimen/_10sdp"
                        android:singleLine="true"
                        android:text="@string/sign_in"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_12ssp" />

                    <ImageView
                        android:id="@+id/imgQR"
                        android:layout_width="@dimen/_35sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginLeft="@dimen/_8sdp"
                        android:src="@drawable/ic_qr_code_btn"
                        android:visibility="gone" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/or_signin_with"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_10ssp"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/imgFB"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_margin="@dimen/_5sdp"
                        android:src="@drawable/ic_fb_icon" />

                    <ImageView
                        android:id="@+id/imgGooglePlus"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_margin="@dimen/_5sdp"
                        android:src="@drawable/ic_google_icon" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="@dimen/_4sdp"
                        android:text="@string/no_account"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/_10ssp" />

                    <TextView
                        android:id="@+id/txtSignUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:linksClickable="false"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/sign_up1"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/_10ssp" />

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>


</RelativeLayout>